Nuvem adicionada e tela de derrota melhorada

--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <title>Megaman</title>
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/styleDerrota.css">
 </head>
 <body>
-    
+    <nav class="fundoDerrota">
+        <div class="telaDerrota">
+            <h1 class="textDerrota">VOCÊ PERDEU!</h1>
+            <a href="index.html"><button class="btnJogarNovamente">Jogar Novamente</button></a>
+        </div>
+    </nav>
     <main class="container">
+        <img src="./img/nuvem.png" alt="" class="nuvem">
         <img src="./img/mega.gif" alt="" class="megaman">
         <img src="./img/arvore.png" alt="" class="arvore">
     </main>
